--- a/css/main.css
+++ b/css/main.css
@@ -96,8 +96,53 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
-
+body{
+    text-align: center;
+}
+.grid .col-md-4{
+    height: 110px;
+    border: 1px solid #ddd;
+}   
+.inner-grid, .inner-pics{
+    display: inline-block;
+    margin: 50px 0 25px;
+    width: 330px;
+}
+.img{
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    border: 2px solid #5bc0de;
+    border-radius: 15px;
+    cursor: pointer;
+}
+.img-bird{
+    background: transparent url("../img/bird-rev.jpg") no-repeat 0 0;
+}
+.img-giraffe{
+    background: transparent url("../img/giraffe-rev.jpg") no-repeat 0 0;
+}
+.img-elephant{
+    background: transparent url("../img/elephant-rev.jpg") no-repeat 0 0;
+}
+.img-lion{
+    background: transparent url("../img/lion-rev.jpg") no-repeat 0 0;
+}
+.img-monkey{
+    background: transparent url("../img/monkey-rev.jpg") no-repeat 0 0;
+}
+.img-penguin{
+    background: transparent url("../img/penguin-rev.jpg") no-repeat 0 0;
+}
+.img-seahorse{
+    background: transparent url("../img/seahorse-rev.jpg") no-repeat 0 0;
+}
+.img-snake{
+    background: transparent url("../img/snake-rev.jpg") no-repeat 0 0;
+}
+.img-turtle{
+    background: transparent url("../img/turtle-rev.jpg") no-repeat 0 0;
+}
 
 
 
