--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,9 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
+@-viewport {
+width: 800px;
+}
 
 html,
 button,
