--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,9 @@ h1{
     margin: 50px 0 25px;
     width: 330px;
 }
+.nameLabel {
+    font-size: 300%;
+}
 .img{
     display: inline-block;
     width: 100px;
